# fileoteca

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go  tables.md
docs/superpowers/plans/: 2026-04-30-fileoteca-windows-integration.md  2026-05-02-ocr-server-implementation.md  2026-05-03-classifier-implementation.md  2026-05-11-thumbnail-generation.md  2026-05-17-folder-management.md
docs/superpowers/specs/: 2026-04-30-fileoteca-windows-integration-design.md  (+5 more)
internal/addfile/: addfile.go
internal/api/: open.go
internal/classifier/: classifier.go  classifier_test.go  edgecase_test.go  model.go  model_test.go  production_test.go  retrain_queue.go  scenario_test.go  tokenizer.go  tokenizer_test.go  vocab_test.go
internal/ocr/: client.go  queue.go  server.go
internal/shell/: config.go  docadd.go  registry.go  server.go  tray.go
migrations/: 1776197413_init_migration.go  1776197413_install_migration.go  1776197414_seed_data.go  1776197415_add_thumbnail.go
ocr-server/: config.toml  main.py  pyproject.toml  winocr.py
ocr-server/ocr_server/: main.py  queue.py
ocr-server/ocr_server/engine/: __init__.py  base.py  registry.py  winocr.py
ocr-server/ocr_server/pipeline/: image.py  markitdown_.py  pdf.py  thumbnail.py
ocr-server/ocr_server/proto/: ocr_pb2.py  ocr_pb2_grpc.py
ocr-server/proto/: ocr.proto
ocr-server/tests/: test_engine.py  test_pipeline.py  test_thumbnail.py
pb_data/: auxiliary.db  data.db
pb_public/: index.html
pb_public/_app/: version.json
web/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
(+64 files in other folders)
